--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "",
   "dependencies": {
     "express": "^4.16.4",
+    "nipplejs": "^0.8.2",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
