--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "fourfrogs",
   "version": "",
   "dependencies": {
     "express": "^4.16.4",
@@ -11,5 +11,8 @@
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
     "nodemon": "^1.18.11"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
