--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.18.11"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch-start": "nodemon server.js"
   }
 }
