Added forever for node.js server, new approach to game reset. Was tryin to to reset game object but need to look into lodash, now server just restarts when game is over. Only one game lobby can be used now. Moving multiple lobbys to a lower priority

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "",
   "dependencies": {
     "express": "^4.16.4",
+    "forever": "^1.0.0",
     "nipplejs": "^0.8.2",
     "socket.io": "^2.2.0"
   },
